--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,2 +1,18 @@
+# Node
 node_modules
+npm-debug.log*
+yarn.lock
+pnpm-lock.yaml
+dist
 .env
+.env.*
+# Logs
+logs
+*.log
+# OS
+.DS_Store
+# Editor
+.vscode
+.idea
+# Docker
+docker-data
