--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,17 +1,16 @@
 {
   "compilerOptions": {
-    "target": "ES2020",                  // modern JS output
-    "module": "CommonJS",                // Node.js module system
-    "rootDir": "./src",                  // source code folder
-    "outDir": "./dist",                   // compiled JS output folder
-    "strict": true,                       // strict type checking
-    "esModuleInterop": true,              // import compatibility
+    "target": "ES2022",
+    "lib": ["ES2022"],
+    "module": "ES2022",
+    "moduleResolution": "Bundler",
+    "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "skipLibCheck": true,                 // skip type checking of node_modules
-    "resolveJsonModule": true,
-    "moduleResolution": "node",
-    "noImplicitAny": false
+    "resolveJsonModule": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "include": ["src"]
 }
