--- a/api/package.json
+++ b/api/package.json
@@ -41,6 +41,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.7",
     "@types/node": "^22.5.4",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yamljs": "^0.2.34",
     "eslint": "^9.9.0",
     "eslint-config-standard-with-typescript": "^43.0.0",
     "eslint-plugin-import": "^2.30.0",
