--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,31 +1,36 @@
+# -------------------------
 # Build stage
+# -------------------------
 FROM node:20-alpine AS build
 WORKDIR /app
 
-# Install ALL deps (including dev) so tsc is available
+# Install dependencies (including dev, so tsc is available)
 COPY package.json package-lock.json* pnpm-lock.yaml* yarn.lock* ./
 RUN npm ci --legacy-peer-deps
 
-# Copy source
+# Copy source code
 COPY tsconfig.json ./
 COPY src ./src
 COPY public ./public
-COPY src/docs ./docs   # ✅ Copy openapi.yaml to /app/docs
 
-# Build
+# Build TypeScript
 RUN npm run build
 
+# -------------------------
 # Production stage
+# -------------------------
 FROM node:20-alpine AS production
 WORKDIR /app
 ENV NODE_ENV=production
 
-# Copy only necessary files from build stage
+# Copy only the necessary files from build stage
 COPY --from=build /app/package.json ./
 COPY --from=build /app/node_modules ./node_modules
 COPY --from=build /app/dist ./dist
 COPY --from=build /app/public ./public
-COPY --from=build /app/docs ./docs   # ✅ Include docs in final image
 
+# Expose API port
 EXPOSE 4000
+
+# Start the server
 CMD ["node", "dist/server.js"]
